# multi-agent-image-gen-evals

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  SNAPSHOTS.md  SNAPSHOTS.zh-CN.md  TODOS.md  app.py  compare.py  config.py  critique.py  evaluate.py  gates.py  generate.py  i18n.py  pipeline.py  prompts.py  pyproject.toml  revise.py  schemas.py  test_schemas.py  ui_architecture.py  ui_dashboard.py  ui_theme.py  utils.py
.streamlit/: config.toml
docs/: UI-optimize-2.md
docs/superpowers/: 2026-05-02-review-checklist.md  UI配色优化建议.md
docs/superpowers/specs/: 2026-04-26-i18n-design.md  2026-05-02-adr-human-in-loop-v2.md  2026-05-02-human-in-loop-v2-refactor.md
static/: style.css  theme-dark.css
tests/: conftest.py  test_gates.py  test_generate.py  test_pipeline.py  test_schemas.py  test_utils.py  test_winner.py
